Fix minor layout bug in Bootstrap where wide images sometimes cause horizontal toolbars

--- a/modules/site/parent_templates/site/common/css/custom.css
+++ b/modules/site/parent_templates/site/common/css/custom.css
@@ -244,6 +244,10 @@ h3.contentTitle {
         display: block;
     }
 
+    .img-polaroid {
+       box-sizing: border-box;
+    }
+
     /* --HEADER-------------------------------------------------------------- */
     /*#overview div.logoR, #overview div.logoL {
       //display:none;
